# Libann

./: Doxyfile  INSTALL  Makefile.in  Smake  TODO  aclocal.m4  changelog  check_cdate.sh  config  config.h.in  configure  configure.in  generate-depends.sh  install-sh  test_template  vp
ann/: ann.cc  ann.h  boltzmann.cc  boltzmann.h  fm.cc  fm.h  hopfield.cc  hopfield.h  kohonen.cc  kohonen.h  layer.cc  layer.h  leakDetect.cc  log.cc  log.h  matrix.cc  matrix.h  mesh.cc  mesh.h  mlp.cc  mlp.h  outputMap.cc  outputMap.h  persist.cc  persist.h  ucount.h  vers.cc.in  vers.h
demos/: cmdline.cc  cmdline.h  kohonen.cc  main.cc  parse.y  syms.c  syms.h  tokenise.l
demos/boltzmann/: boltzmann-char.cc
demos/common/: direntry.cc  direntry.h  glyph.cc  glyph.h  regexpr.cc  regexpr.h
demos/data/glyphs/: a1.char  a2.char  a3.char  a4.char  a5.char  a6.char  b1.char  b2.char  b3.char  b4.char  b5.char  b6.char  c1.char  c2.char  c3.char  c4.char  c5.char  c6.char  d1.char  d2.char  d3.char  (+9 more)
demos/dict-style/: dict-style.cc
demos/hopfield-char/: hopfield-char.cc
demos/hspell/: hspell.cc  make.mk  word.cc  word.h
demos/mlp-char/: mlp-char.cc
demos/wordFreq/: freq.cc  freqCount.cc  freqCount.h  wordVec.cc  wordVec.h
doc/: Makefile  doc.mk  fdl.texinfo  libann.texinfo
test/00/: t0001a.sh  t0002a.sh  t0003a.sh  t0004a.sh  t0005a.sh  t0006a.sh  t0007a.sh  t0008a.sh  t0009a.sh  t0010a.sh  t0011a.sh  t0012a.sh  t0013a.sh  t0014a.sh  t0015a.sh  t0016a.sh  t0017a.sh  t0018a.sh  t0019a.sh  t0020a.sh  t0021a.sh  t0022a.sh  t0023a.sh  t0024a.sh  t0025a.sh  t0026a.sh  t0027a.sh  t0028a.sh  t0029a.sh  t0031a.sh  t0032a.sh  t0033a.sh  t0034a.sh  t0035a.sh  t0036a.sh  t0037a.sh  t0040a.sh  t0041a.sh  t0042a.sh  t0043a.sh  (+4 more)
(+50 files in other folders)
