dnl
dnl    ann  An artificual neural network library
dnl    Copyright (C) 2000  John Darrington
dnl
dnl    This program is free software; you can redistribute it and/or modify
dnl    it under the terms of the GNU General Public License as published by
dnl    the Free Software Foundation; either version 2 of the License, or
dnl    (at your option) any later version.
dnl
dnl    This program is distributed in the hope that it will be useful,
dnl    but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl    GNU General Public License for more details.
dnl
dnl    You should have received a copy of the GNU General Public License
dnl    along with this program; if not, write to the Free Software
dnl    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA



dnl $Id: configure.in,v 1.16 2003/05/14 05:50:16 john Exp $


dnl Process this file with autoconf to produce a configure script.
AC_INIT(ann/layer.cc)
AC_CONFIG_HEADER(config.h)

AEGIS_INIT

. $srcdir/vp

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)


dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LEX


dnl Checks for libraries.

dnl Checks for header files.
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_FUNCTION

dnl Checks for library functions.
AC_CHECK_FUNC(lrand48, , AC_DEFINE(__STL_NO_DRAND48))



AC_ARG_ENABLE(leak-detector,
[  --enable-leak-detector  compile in heap allocation checking],LEAK_DETECTOR=yes)



AC_SUBST(LEAK_DETECTOR)
AC_SUBST(AEPATH)

AC_OUTPUT(Makefile ann/vers.cc)








